# fourbar-linkage-analysis

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  pyproject.toml  run.sh
.github/workflows/: deploy.yml
docs/: REPORT.md
pyscript/: README.md  generate_figures.py
src/: fourbar.rs  main.rs
