[package]
name = "four_bar_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
env_logger = "0.11.8"

# Web dependencies for WASM deployment
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]
